core/bridge/go_src/libs/desktop/mihomo_core_linux_amd64.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/mihomo-flutter-cross/core */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */




/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif


// 初始化Mihomo核心
extern GoInt InitializeCore(GoString configPath);

// 启动Mihomo代理服务
extern GoInt StartMihomoProxy();

// 停止Mihomo代理服务
extern GoInt StopMihomoProxy();

// 重载配置
extern GoInt ReloadConfig(GoString configPath);

// 获取当前状态信息
extern char* GetMihomoStatus();

// 获取版本信息
extern char* GetMihomoVersion();

// 日志回调函数
extern void LogCallback(GoString logLevel, GoString message);

// 设置日志级别
extern GoInt SetLogLevel(GoString level);

// Hello World测试函数
extern char* HelloWorld();

// TUN相关接口
// 创建TUN接口
extern GoInt TunCreate(GoString tunName);

// 启动TUN流量处理
extern GoInt TunStart();

// 停止TUN流量处理
extern GoInt TunStop();

// 从TUN读取数据包
extern char* TunReadPacket();

// 向TUN写入数据包
extern GoInt TunWritePacket(GoString packetData);

#ifdef __cplusplus
}
#endif